Fix alignment of unordered list in main content

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -40,3 +40,17 @@ blockquote > p {
   -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
   box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
 }
+
+#primary ul {
+  list-style: none;
+  margin-left: 1.5em;
+  padding-left: 0;
+  text-indent: -1.5em;
+}
+
+#primary ul li:before {
+  content: "–";
+  display: block;
+  float: left;
+  width: 1.5em;
+}
